<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="simple"
        android:layout_below="@id/textView1"
        android:onClick="clickButtonSimple"
        android:id="@+id/button_simple" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:layout_below="@id/button_simple"
        android:id="@+id/text_simple" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_simple"
        android:id="@+id/sendtext_simple"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="send"
        android:layout_below="@id/sendtext_simple"
        android:onClick="clickSendSimple"
        android:id="@+id/send_simple" />


</RelativeLayout>
